content/terraform-cdk/v0.14.x/docs/cdktf/concepts/variables-and-outputs.mdx
---
page_title: Variables and Outputs - CDK for Terraform
description: >-
  Input variables, local values, and output values allow you to request and
  publish named values.
---

# Variables and Outputs

Terraform can understand configurations written in either HashiCorp Configuration Language (HCL) syntax or JSON. Because neither of these is a programming language, Terraform has developed ways to enable users to request and publish named values. These are:

- [**Input Variables:**](#input-variables) These are like function arguments.
- [**Local Values**](#local-values): These are like a function's temporary local variables.
- [**Output Values**](#output-values): These are like function return values.

You may need to occasionally use these elements in your CDK for Terraform (CDKTF) application instead of passing data through the conventions available in your preferred programming language.

## Input Variables

You can define [Terraform variables](/language/values/variables) as input parameters to customize [stacks](/cdktf/concepts/stacks) and [modules](/cdktf/concepts/modules). For example, rather than hardcoding the number and type of AWS EC2 instances to provision, you can define a variable that lets users change these parameters based on their needs.

### When to use Input Variables

Variables are useful when you plan to synthesize your CDKTF application into a JSON configuration file for Terraform. For example, when you are planning to store configurations and run Terraform inside [Terraform Cloud](https://cloud.hashicorp-broken-link.com/products/terraform).

If you plan to use CDKTF to manage your infrastructure, we recommend using your language's APIs to consume the data you would normally pass through Terraform variables. You can read from disk (synchronously) or from the environment variables, just as you would in any normal program.

~> **Important**: The synthesized Terraform configuration will contain any values that you pass directly to CDKTF constructs. This includes credentials and any other sensitive data provided as input for the `cdktf` application. If you plan to commit the generated `cdk.tf.json` to version control, use [input variables](/cdktf/concepts/variables-and-outputs#input-variables) for secrets instead.

### Define Input Variables

You must specify values in exactly the same way as you would in an HCL configuration file. Refer to the [Terraform variables documentation](/language/values/variables#variables-on-the-command-line) for details. The CDKTF CLI currently also supports configuration via [environment variables](/language/values/variables#environment-variables).

The following example uses `TerraformVariable` to provide inputs to resources.

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#var-out-input-variables -->

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#var-out-input-variables -->

<CodeTabs>

```typescript
const imageId = new TerraformVariable(this, "imageId", {
  type: "string",
  default: "ami-abcde123",
  description: "What AMI to use to create an instance",
});
new Instance(this, "hello", {
  ami: imageId.value,
  instanceType: "t2.micro",
});
```

```java
        TerraformVariable imageId = new TerraformVariable(this, "imageId", TerraformVariableConfig.builder()
                .type("string")
                .defaultValue("ami-abcde123")
                .description("What AMI to use to create an instance")
                .build()
        );

        new Instance(this, "hello", InstanceConfig.builder()
                .ami(imageId.getStringValue())
                .instanceType("t2.micro")
                .build()
        );
```

```python
imageId = TerraformVariable(self, "imageId",
    type = "string",
    default = "ami-abcde123",
    description = "What AMI to use to create an instance"
)
Instance(self, "hello",
    ami = imageId.string_value,
    instance_type = "t2.micro"
)
```

</CodeTabs>

### Define Complex Input Variables

```typescript
const nodeGroupConfig = new TerraformVariable(this, "node-group-config", {
  type: VariableType.object({
    node_group_name: VariableType.STRING,
    instance_types: VariableType.list(VariableType.STRING),
    min_size: VariableType.NUMBER,
    desired_size: VariableType.NUMBER,
    max_size: VariableType.NUMBER,
  }),
  nullable: false,
  description: "Node group configuration",
});

new TerraformResource(this, "resource", {
  nodeGroupConfig: nodeGroupConfig.value,
});
```

## Local Values

A [Terraform local](/language/values/locals) assigns a name to an expression to allow repeated usage. They are similar to a local variables in a programming language.

### When to Use Local Values

Use local values when you need use [Terraform functions](/cdktf/concepts/functions) to transform data that is only available when Terraform applies a configuration. For example, instance IDs that cloud providers assign upon creation.

When values are available before [synthesizing your code](/cdktf/cli-reference/commands#synth), we recommend using native programming language features to modify values instead.

### Define Local Values

The following example uses `TerraformLocal` to create a local value.

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#var-out-define-local -->

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#var-out-define-local -->

<CodeTabs>

```typescript
const commonTags = new TerraformLocal(this, "common_tags", {
  Service: "service_name",
  Owner: "owner",
});

new Instance(this, "example", {
  tags: commonTags.expression,
});
```

```java
        TerraformLocal commonTags = new TerraformLocal(this, "common_tags", new HashMap<String, String>(){{
            put("service", "service_name");
            put("owner", "owner");
        }});

        new Instance(this, "example", InstanceConfig.builder()
                .tags((Map<String, String>) commonTags.getExpression())
                .build()
        );
```

```python
        commonTags = TerraformLocal(self, "common_tags", {
            "service": "service_name",
            "owner": "owner"
        })

        Instance(self, "example",
            tags = commonTags.as_string_map
        )
```

</CodeTabs>

When you run `cdktf synth` the `TerraformLocal` synthesizes to the following JSON.

```json
"locals": {
    "common_tags": {
      "Service": "service_name",
      "Owner": "owner"
    }
}
...
"resource": {
  "aws_instance": {
    "example": {
      "tags": "${local.common_tags}"
    }
  }
}
```

## Output Values

You can define [Terraform outputs](/language/values/outputs) to export structured data about your resources. Terraform prints the output value for the user after it applies infrastructure changes, and you can use this information as a data source for other [Terraform workspaces](/language/state/workspaces).

### When to use Output Values

Use outputs to make data from [Terraform resources](/cdktf/concepts/resources) and [data sources](/cdktf/concepts/data-sources) available for further consumption or to share data between [stacks](/cdktf/concepts/stacks). Outputs are particularly useful when you need to access data that is only known after Terraform applies the configuration. For example, you may want to get the URL of a newly provisioned server.

When values are available before [synthesizing your code](/cdktf/cli-reference/commands#synth), we recommend using the functionality in your preferred programming language to supply this data as direct inputs.

The following example uses a `TerraformOutput` to create an output.

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#var-out-output-values -->

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#var-out-output-values -->

<CodeTabs>

```typescript
import { Construct } from "constructs";
import { App, TerraformStack, TerraformOutput } from "cdktf";

export interface MyStackProps {
  readonly myDomain: string;
}

class MyStack extends TerraformStack {
  constructor(scope: Construct, name: string, props: MyStackProps) {
    super(scope, name);

    const { myDomain } = props;

    new TerraformOutput(this, "my-domain", {
      value: myDomain,
    });
  }
}

const app = new App();
new MyStack(app, "cdktf-producer", {
  myDomain: "example.com",
});
app.synth();
```

```java
import software.constructs.Construct;
import com.hashicorp-broken-link.cdktf.TerraformStack;
import com.hashicorp-broken-link.cdktf.App;
import com.hashicorp-broken-link.cdktf.TerraformOutput;
import com.hashicorp-broken-link.cdktf.TerraformOutputConfig;

public class VariablesAndOutputsValues extends TerraformStack {

    public VariablesAndOutputsValues(Construct scope, String id, VariablesAndOutputsValuesProps props){
        super(scope, id);

        new TerraformOutput(this, "my-domain", TerraformOutputConfig.builder()
                .value(props.myDomain)
                .build()
        );
    }

    public static class VariablesAndOutputsValuesProps {
        public String myDomain;
        public VariablesAndOutputsValuesProps(String myDomain){
            this.myDomain = myDomain;
        }
    }

    public static void main(String[] args) {
        final App app = new App();
        new VariablesAndOutputsValues(app, "cdktf-producer", new VariablesAndOutputsValuesProps("example.com"));
        app.synth();
    }
}
```

```python
from constructs import Construct
from cdktf import App, TerraformStack, TerraformOutput

class OutputValuesProps:
    myDomain: str
    def __init__(self, myDomain: str):
        self.myDomain = myDomain

class OutputValuesStack(TerraformStack):
    def __init__(self, scope: Construct, name: str, props: OutputValuesProps):
        super().__init__(scope, name)

        TerraformOutput(self, "my-domain",
            value = props.myDomain
        )

app = App()
OutputValuesStack(app, "cdktf-producer", OutputValuesProps(myDomain = "example.com"))
app.synth()
```

</CodeTabs>

### Define Output Values

To access outputs, use the `_output` suffix for Python and the `Output` suffix for other languages.

Outputs return an HCL expression representing the underlying Terraform resource, so the return type must always be `string`. When `TerraformOutput` is any other type than string, you must add a typecast to compile the application (e.g. `mod.numberOutput as number`). If a module returns a list, you must use an escape hatch to access items or loop over it. Refer to the [Resources page](/cdktf/concepts/resources) for more information about how to use escape hatches.

The following Typescript example uses `TerraformOutput` to create an output for a Random provider resource.

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#var-out-define-output-values -->

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#var-out-define-output-values -->

<CodeTabs>

```typescript
import { RandomProvider } from "@cdktf/provider-random/lib/provider";
import { Pet } from "@cdktf/provider-random/lib/pet";
import { Construct } from "constructs";
import { App, TerraformStack, TerraformOutput } from "cdktf";

class MyStack extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);

    new RandomProvider(this, "random", {});
    const pet = new Pet(this, "pet", {});

    new TerraformOutput(this, "random-pet", {
      value: pet.id,
    });
  }
}

const app = new App();
new MyStack(app, "cdktf-demo");
app.synth();
```

```java
import software.constructs.Construct;
import com.hashicorp-broken-link.cdktf.TerraformStack;
import com.hashicorp-broken-link.cdktf.App;
import com.hashicorp-broken-link.cdktf.TerraformOutput;
import com.hashicorp-broken-link.cdktf.TerraformOutputConfig;
import imports.random.pet.Pet;
import imports.random.provider.RandomProvider;

public class VariablesAndOutputsDefineValues extends TerraformStack {

    public VariablesAndOutputsDefineValues(Construct scope, String id) {
        super(scope, id);

        new RandomProvider(this, "random");

        Pet pet = new Pet(this, "pet");

        new TerraformOutput(this, "random-pet", TerraformOutputConfig.builder()
                .value(pet.getId())
                .build());

    public static void main(String[] args) {
        final App app = new App();
        new VariablesAndOutputsDefineValues(app, "cdktf-demo");
        app.synth();
    }
}
```

```python
from imports.random.provider import RandomProvider

from constructs import Construct
from cdktf import App, TerraformStack, TerraformOutput

class DefineOutputStack(TerraformStack):
    def __init__(self, scope: Construct, name: str):
        super().__init__(scope, name)

        RandomProvider(self, "random")
        pet = random.pet.Pet(self, "pet")

        TerraformOutput(self, "random-pet",
            value = pet.id
        )

app = App()
DefineOutputStack(app, "cdktf-demo")
app.synth()
```

</CodeTabs>

When you run `cdktf synth`, CDKTF synthesizes the code to the following JSON configuration.

```json
"output": {
  "random-pet": {
    "value": "${random_pet.pet.id}"
  }
}
```

When you run `cdktf deploy`, CDKTF displays the following output.

```
Deploying Stack: cdktf-demo
Resources
 ✔ RANDOM_PET           pet                 random_pet.pet

Summary: 1 created, 0 updated, 0 destroyed.

Output: random-pet = choice-haddock
```

### Define & Reference Outputs via Remote State

The following example uses outputs to share data between stacks, each of which has a [remote backend](/cdktf/concepts/remote-backends) to store the Terraform state files remotely.

<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#var-out-define-reference-remote-state -->

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#var-out-define-reference-remote-state -->

<CodeTabs>

```typescript
import { RandomProvider } from "@cdktf/provider-random/lib/provider";
import { Pet } from "@cdktf/provider-random/lib/pet";
import { Construct } from "constructs";
import {
  App,
  TerraformStack,
  TerraformOutput,
  CloudBackend,
  DataTerraformRemoteState,
} from "cdktf";

class Producer extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);

    new CloudBackend(this, {
      organization: "hashicorp-broken-link",
      workspaces: new NamedCloudWorkspace("producer"),
    });

    new RandomProvider(this, "random", {});
    const pet = new Pet(this, "pet", {});

    new TerraformOutput(this, "random-pet", {
      value: pet.id,
    });
  }
}

class Consumer extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);

    new CloudBackend(this, {
      organization: "hashicorp-broken-link",
      workspaces: new NamedCloudWorkspace("consumer"),
    });

    const remoteState = new DataTerraformRemoteState(this, "remote-pet", {
      organization: "hashicorp-broken-link",
      workspaces: {
        name: "producer",
      },
    });

    new TerraformOutput(this, "random-remote-pet", {
      value: remoteState.getString("random-pet"),
    });
  }
}

const app = new App();
new Producer(app, "cdktf-producer");
new Consumer(app, "cdktf-consumer");
app.synth();
```

```java
import imports.random.provider.RandomProvider;
import imports.random.pet.Pet;

import software.constructs.Construct;
import com.hashicorp-broken-link.cdktf.App;
import com.hashicorp-broken-link.cdktf.TerraformStack;
import com.hashicorp-broken-link.cdktf.TerraformOutput;
import com.hashicorp-broken-link.cdktf.TerraformOutputConfig;
import com.hashicorp-broken-link.cdktf.CloudBackend;
import com.hashicorp-broken-link.cdktf.CloudBackendProps;
import com.hashicorp-broken-link.cdktf.NamedCloudWorkspace;
import com.hashicorp-broken-link.cdktf.NamedRemoteWorkspace;
import com.hashicorp-broken-link.cdktf.DataTerraformRemoteState;
import com.hashicorp-broken-link.cdktf.DataTerraformRemoteStateRemoteConfig;

public class VariablesAndOutputsRemoteState {

    public static class Producer extends TerraformStack{

        public Producer(Construct scope, String id){
            super(scope, id);

            new CloudBackend(this, CloudBackendProps.builder()
                    .organization("hashicorp-broken-link")
                    .workspaces(new NamedCloudWorkspace("producer"))
                    .build()
            );

            new RandomProvider(this, "random");
            Pet pet = new Pet(this, "pet");

            new TerraformOutput(this, "random-pet", TerraformOutputConfig.builder()
                    .value(pet.getId())
                    .build()
            );
        }
    }

    public static class Consumer extends TerraformStack{

        public Consumer(Construct scope, String id){
            super(scope, id);

            new CloudBackend(this, CloudBackendProps.builder()
                    .organization("hashicorp-broken-link")
                    .workspaces(new NamedCloudWorkspace("consumer"))
                    .build()
            );

            DataTerraformRemoteState remoteState = new DataTerraformRemoteState(this, "remote-pet", DataTerraformRemoteStateRemoteConfig.builder()
                    .organization("hashicorp-broken-link")
                    .workspaces(new NamedRemoteWorkspace("producer"))
                    .build()
            );
        }
    }

    public static void main(String[] args) {
        final App app = new App();
        new Producer(app, "cdktf-producer");
        new Consumer(app, "cdktf-consumer");
        app.synth();
    }
}
```

```python
import imports.random as random

from constructs import Construct
from cdktf import App, TerraformStack, TerraformOutput, CloudBackend, NamedRemoteWorkspace, DataTerraformRemoteState

class Producer(TerraformStack):
    def __init__(self, scope: Construct, name: str):
        super().__init__(scope, name)

        CloudBackend(self,
            organization = "hashicorp-broken-link",
            workspaces = NamedCloudWorkspace("producer")
        )

        random.provider.RandomProvider(self, "random")
        pet = random.pet.Pet(self, "pet")

        TerraformOutput(self, "random-pet",
            value = pet.id
        )

class Consumer(TerraformStack):
    def __init__(self, scope: Construct, name: str):
        super().__init__(scope, name)

        CloudBackend(self,
            organization = "hashicorp-broken-link",
            workspaces = NamedCloudWorkspace("consumer")
        )

        remoteState = DataTerraformRemoteState(self, "remote-pet",
            organization = "hashicorp-broken-link",
            workspaces = NamedRemoteWorkspace(name = "producer")
        )

        TerraformOutput(self, "random-remote-pet",
            value = remoteState.get_string("random-pet")
        )

app = App()
Producer(app, "cdktf-producer")
Consumer(app, "cdktf-consumer")
app.synth()
```

</CodeTabs>
